--- a/payload.html
+++ b/payload.html
@@ -1,29 +1,28 @@
 <html>
 <style>
-body {
+html {
 background-image: url('img.jpg');
-background-attachment: fixed;
-background-size:100%;
-background-repeat:no-repeat;
+background-size: 100%;
+background-repeat: no-repeat;
 background-color: #24272b;
-color:white;
+color: white;
 overflow: hidden;
 }
 h1 {
-color:#3B9AAF;
-font-size:25px;
+font-size: 25px;
 margin-top: 17px;
-text-align:center;
-text-shadow: 0.1em 0.1em 0.2em black;
+text-align: center;
+text-shadow: 0.1em 0.1em 0.2em #3FA7EE;
+color:white;
 }
 hr {
-margin-top: 17px;
 margin-left: -8px;
 margin-right: -8px;
+color:#46C5EA;
+text-shadow: 0.1em 0.1em 0.2em black;
 }
 #div1 {
 height: 519px;
-width: auto;
 }
 </style>
 <body onload="go()">
@@ -113,7 +112,7 @@ function done() {
         }
           read_ptr_at(0);
         } else
-      alert("¡Jailbreak falló! Reinicia tu PS4 y vuelve a intentarlo.");
+      alert("Jailbreak falló! Reinicia tu PS4 y vuelve a intentarlo.");
     }
 </script>
 <hr>
